<resources>
    <string name="app_name">북마크 SE</string>
    <string name="navigation_view_header_title">북마크 SE</string>
    <string name="info_title">정보</string>
    <string name="notice_title">알림</string>
    <string name="bookmark_title">북마크</string>
    <string name="note_title">노트</string>
    <string name="home_title">Home</string>
    <string name="push_notice_title">푸시알림</string>
    <string name="dark_theme_title">다크테마</string>
    <string name="menu_add">추가하기</string>
    <string name="popup_add_item_ok">확인</string>
    <string name="popup_add_item_cancel">취소</string>
    <string name="popup_add_item_title">아이템 추가</string>
    <string name="popup_edit_bookmark">북마크 편집</string>
    <string name="popup_edit_category">카테고리 편집</string>
    <string name="popup_add_item_et_title">제목</string>
    <string name="popup_add_item_et_url">주소</string>
    <string name="popup_add_item_category">카테고리</string>
    <string name="loading">로딩중</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="edit_item_title">Title</string>
    <string name="edit_item_url">URL</string>
    <string name="popup_edit_btn_edit">편집</string>
    <string name="popup_edit_btn_delete">삭제</string>
    <string name="popup_edit_btn_share">공유</string>
    <string name="edit_delete_questions">아이템을 삭제하시겠습니까?</string>
    <string name="edit_all_delete_questions">아이템을 모두 삭제하시겠습니까?</string>
    <string name="user_title">사용자 정보</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>


    <string name="men_refresh">새로고침</string>
    <string name="menu_search">검색</string>
    <string name="menu_close">종료</string>
    <string name="add_bookmark">북마크 추가</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">로그인</string>
    <string name="logout_text">로그아웃</string>
    <string name="guest_user">Guest User</string>
    <string name="data_save">로그인 후 데이터를 안전하게 보관하세요.</string>
    <string name="google_login">구글 로그인</string>
    <string name="facebook_login">페이스북 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="pipp">개인정보처리방침</string>
    <string name="tos">이용약관</string>
    <string name="info_pipp">로그인시 위 내용에 동의한 것으로 간주됩니다.</string>
    <string name="open_source_license">오픈소스라이선스</string>

    <!--facebook-->
    <string name="facebook_app_id">266660541180254</string>
    <string name="fb_login_protocol_scheme">fb266660541180254</string>
    <string name="menu_notice">알림</string>
    <string name="delete_all">전체삭제</string>

</resources>
