<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/btn_login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="right"
        android:src="@drawable/ic_close"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="30sp"
        android:textColor="#fff"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/data_save"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <!-- 구글로그인 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_google_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/login_button_box">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/logo_google"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/google_login"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 페이스북로그인 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/login_button_box">

                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/logo_facebook"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_facebook"
                    app:layout_constraintEnd_toStartOf="@+id/tv_facebook"
                    app:layout_constraintTop_toTopOf="@+id/tv_facebook" />

                <TextView
                    android:id="@+id/tv_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/facebook_login"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 네이버로그인 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/login_button_box">

                <TextView
                    android:id="@+id/tv_naver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/guest_user"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_pipp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/pipp"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/btn_tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/info_pipp"
                android:textColor="#fff"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>