<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notice.NoticePopupActivity">

    <!-- Item Delete Layout -->
    <LinearLayout
        android:background="?attr/custom_background"
        android:id="@+id/popup_delete_notice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 타이틀 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/menu_notice"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_delete_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="?attr/custom_text"/>
    </LinearLayout>

    <!-- 확인 / 취소 버튼 -->
    <LinearLayout
        android:background="?attr/custom_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bookmark_touch_feedback"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/popup_add_item_ok"
            android:textColor="#fff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_delete_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bookmark_touch_feedback"
            android:layout_margin="10dp"
            android:text="@string/popup_add_item_cancel"
            android:textColor="#fff"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>